flux/clusters/studio/infrastructure/prometheus-operator/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
  labels:
    name: prometheus
