flux/clusters/studio/infrastructure/prometheus-operator/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: bruno-site-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "bruno.lucena.cloud"
    - "*.lucena.cloud"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "bruno.lucena.cloud"
    - "*.lucena.cloud"
    tls:
      mode: SIMPLE
      credentialName: bruno-site-tls
